fixed with on mobile view

--- a/www/style.css
+++ b/www/style.css
@@ -35,7 +35,7 @@ width:100%;
 
 .group table td.value{
 text-align:right;
-min-width:90px;
+min-width:80px;
 padding-right:5px;
 }
 
@@ -44,7 +44,7 @@ text-align:left;
 }
 
 th{
-min-width:120px;
+min-width:100px;
 }
 
 td.limit{
@@ -56,7 +56,7 @@ text-align:right;
 }
 
 td.bar{
-min-width:100px;
+min-width:80px;
 padding:5px;
 height:10px;
 }
